# ros_qt_control

./: CMakeLists.txt  roskcci.pro
include/roskcci/: mainwidget.h  rosnode.h  socketclient.h  tab1ttbcontrol.h  tab2socketclient.h  turtlebotcontrol.h
src/: main.cpp  mainwidget.cpp  rosnode.cpp  tab1ttbcontrol.cpp  tab2socketclient.cpp  turtlebotcontrol.cpp
ui/: mainwidget.ui  tab1ttbcontrol.ui  turtlebotcontrol.ui
